# Rhtslib

./: .BBSoptions  .gitattributes  .gitignore  .gitmodules  DESCRIPTION  NAMESPACE  NEWS  README.md  Rhtslib_build_guide.org  build_htslib_on_493_toolchain.md  cleanup  configure
R/: zzz.R
inst/include/: README  bam.c  bam_aux.c  bam_cat.c  bam_plbuf.c  bam_sort.c  bam_sort.h  bedidx.c  sam.c  sam_opts.c  sam_utils.c  samtools-1.7-compat.h  samtools.h  samtools_version.c  samtools_version.h
man/: Rhtslib-package.Rd  pkgconfig.Rd
src/: Makevars  Makevars.common  Makevars.win  R_init_Rhtslib.c  Rhtslib.c
src/htslib/: .gitattributes  .gitignore  LICENSE  Makefile.am  aclocal.m4  bgzf.c  bgzip.c  configure.ac  faidx.c  hfile.c  hfile_net.c  hts.c  htsfile.c  htslib.mk  kfunc.c  knetfile.c  kstring.c  regidx.c  run_tests.sh  sam.c  synced_bcf_reader.c  tabix.c  tbx.c  vcf.c  vcf_sweep.c  vcfutils.c  version.h
src/htslib-1.15.1/: Makefile.Rhtslib  Makefile.Rhtslib.win  faidx.c  hts.c  kstring.c  sam.c
src/htslib-1.15.1/cram/: cram_decode.c  cram_encode.c  cram_io.c  cram_structs.h
src/htslib-1.15.1/htscodecs/tests/dat/arith/: q40+dir.0  q40+dir.1  q40+dir.65  q8.0  q8.1  q8.128  q8.193  q8.64  qvar.0  qvar.1  qvar.64  qvar.65
src/htslib-1.15.1/htscodecs/tests/dat/fqzcomp/: q40+dir.1  q40+dir.2  q8.2  q8.3  qvar.0  qvar.3
src/htslib-1.15.1/htscodecs/tests/dat/r4x16/: q4.1  q4.128  q4.64  q4.65  q40+dir.0  q8.128  q8.129  q8.193  qvar.0  qvar.1
src/htslib-1.15.1/htscodecs/tests/dat/r4x8/: q8.0
src/htslib-1.15.1/htscodecs/tests/names/tok3/: 03.names.3  03.names.5  03.names.9  08.names.1  08.names.3  08.names.5  08.names.9  nv.names.1  nv.names.11  rr.names.1  rr.names.3  rr.names.5  rr.names.9
src/htslib-1.15.1/htslib/: faidx.h  hts.h
src/htslib-1.18/: Makefile.Rhtslib  Makefile.Rhtslib.win  faidx.c  hts.c  kstring.c  sam.c
src/htslib-1.18/htslib/: faidx.h  hts.h
src/htslib-1.7/: Makefile.Rhtslib  Makefile.Rhtslib.win  Makefile.win  faidx.c  hts.c  kstring.c
src/htslib-1.7/htslib/: faidx.h  hts.h
src/htslib/cram/: cram_codecs.c  cram_decode.c  cram_encode.c  cram_index.c  cram_io.c  cram_samtools.c  cram_stats.c  files.c  mFILE.c  md5.c  open_trace_file.c  os.h  pooled_alloc.c  rANS_static.c  sam_header.c  sam_header.h  string_alloc.c  thread_pool.c  vlen.c  zfio.c
src/htslib/htslib/: khash_str2int.h  ksort.h  vcf.h
src/htslib/lib/: .gitignore  Makefile.am  getpagesize.c  inttypes.in.h  signal.in.h
src/htslib/m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
src/htslib/test/: Makefile.am  test-vcf-api.c  test-vcf-sweep.c  test_view.c
tools/: Makefile.in  config.h.in  configure  lib_Makefile.in  test_Makefile.in
vignettes/: Rhtslib.Rmd
